<resources>
    <string name="app_name">Android Development</string>
    <string name="country_map_icon">Country Map Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy.]]></string>
</resources>